--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 babel==2.16.0
+beautifulsoup4==4.12.3
 certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
@@ -10,6 +11,7 @@ Markdown==3.7
 MarkupSafe==2.1.5
 mergedeep==1.3.4
 mkdocs==1.6.1
+mkdocs-backlinks==0.9.1
 mkdocs-callouts==1.14.0
 mkdocs-get-deps==0.2.0
 mkdocs-glightbox==0.4.0
@@ -27,5 +29,6 @@ pyyaml_env_tag==0.1
 regex==2024.9.11
 requests==2.32.3
 six==1.16.0
+soupsieve==2.6
 urllib3==2.2.3
 watchdog==5.0.3
